Fix bug on safari iOS

--- a/src/components/AppNav/AppNav.scss
+++ b/src/components/AppNav/AppNav.scss
@@ -30,6 +30,6 @@
 
 @media(max-width: $max-xxs-width) {
   .AppNav {
-    padding: 0 10px;
+    padding-left: 10px;
   }
 }
